--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -21,8 +21,8 @@
 #    mode: 0755
 #  when: ((channel_name != "defaultchannel") and ((action != "add_new_org") and (action != "add_new_channel") and (action != "join_peer") and (action != "chaincode")))
 
-- debug: var=orgjson
-  
+- debug: msg="{{ orgjson }}"
+
 - name: Generate network config file
   template:
     src: templates/network-setup-develop.yml.j2
