--- a/awx-automation/fabric-network.yml
+++ b/awx-automation/fabric-network.yml
@@ -39,10 +39,7 @@
       when: deploy_action == "add_new_org"
 
     - debug:
-        msg: "{{ cert }}"
-
-    - debug:
-        var: cert.stdout
+        var: cert
 
     - include_role:
         name: "baf/network"
@@ -59,7 +56,7 @@
         gitops_repo_user_email: "{{ gitops_repo_user_email }}"
         channel_name: "{{ channel_name }}"
         chaincode_version: "{{ chaincode_version }}"
-        org_json: "{{ orgjson_output.stdout | default('') }}"
+        org_json: "{{ cert.stdout | default('') }}"
         registry: "{{ baf_image_repo }}"
         add_org: "{{ add_org_name }}"
         env: "{{ env }}"
