--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -21,7 +21,7 @@
 #    mode: 0755
 #  when: ((channel_name != "defaultchannel") and ((action != "add_new_org") and (action != "add_new_channel") and (action != "join_peer") and (action != "chaincode")))
 
-- debug: msg="{{ orgjson }}"
+- debug: msg="{{ org_json }}"
 
 - name: Generate network config file
   template:
