--- a/awx-automation/fabric-network.yml
+++ b/awx-automation/fabric-network.yml
@@ -28,18 +28,18 @@
       shell: |
         export AWS_PROFILE=cicd-role
         aws secretsmanager get-secret-value --secret-id {{ env }}-orderer-tls --version-stage AWSCURRENT --region {{ aws_region }} | jq -r .SecretString
-      register: cert
-#      when: deploy_action == "new_org"
+      register: orderer_cert
+#     when: deploy_action == "new_org"
 
     - name: Export ORG_MSP
       shell: |
         export AWS_PROFILE=cicd-role
         aws secretsmanager get-secret-value --secret-id {{ env }}-{{ add_org_name }}-msp --version-stage AWSCURRENT --region {{ aws_region }} | jq -r .SecretString
-      register: cert
+      register: msp_cert
       when: deploy_action == "add_new_org"
 
     - debug:
-        var: cert
+        var: orderer_cert
 
     - include_role:
         name: "baf/network"
@@ -56,7 +56,7 @@
         gitops_repo_user_email: "{{ gitops_repo_user_email }}"
         channel_name: "{{ channel_name }}"
         chaincode_version: "{{ chaincode_version }}"
-        org_json: "{{ cert.stdout | default('') }}"
+        org_json: "{{ orderer_cert.stdout | default('') }}"
         registry: "{{ baf_image_repo }}"
         add_org: "{{ add_org_name }}"
         env: "{{ env }}"
