--- a/awx-automation/fabric-network.yml
+++ b/awx-automation/fabric-network.yml
@@ -29,7 +29,7 @@
         export AWS_PROFILE=cicd-role
         aws secretsmanager get-secret-value --secret-id {{ env }}-orderer-tls --version-stage AWSCURRENT --region {{ aws_region }} | jq -r .SecretString
       register: orderer_cert
-#     when: deploy_action == "new_org"
+     when: deploy_action == "new_org"
 
     - name: Export ORG_MSP
       shell: |
@@ -38,8 +38,13 @@
       register: msp_cert
       when: deploy_action == "add_new_org"
 
-    - debug:
-        var: orderer_cert
+    - set_fact:
+        orgjson: orderer_cert.stdout
+      when: deploy_action == "new_org"
+
+    - set_fact:
+        orgjson: msp_cert.stdout
+      when: deploy_action == "add_new_org"
 
     - include_role:
         name: "baf/network"
@@ -56,7 +61,7 @@
         gitops_repo_user_email: "{{ gitops_repo_user_email }}"
         channel_name: "{{ channel_name }}"
         chaincode_version: "{{ chaincode_version }}"
-        org_json: "{{ orderer_cert.stdout | default('') }}"
+        org_json: "{{ orgjson | default('') }}"
         registry: "{{ baf_image_repo }}"
         add_org: "{{ add_org_name }}"
         env: "{{ env }}"
