--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -46,6 +46,7 @@
       data:
         ID: "{{ access_id | b64encode }}"
         KEY: "{{ access_key | b64encode }}"
+        PAT: "{{ gitops_repo_user_token | b64encode }}"
 
 - name: Create configmap for network configuration file
   shell: |
@@ -78,6 +79,11 @@
               secretKeyRef:
                 name: openidl-baf-aws
                 key: KEY
+          - name: PAT
+            valueFrom:
+              secretKeyRef:
+                name: openidl-baf-aws
+                key: PAT
           - name: AWS_REGION
             value: "{{ region }}"
           - name: ACTION
@@ -97,9 +103,10 @@
           command: ["sh", "-c"]
           args: 
           - |-
+            set -x
             #!/bin/bash -e
             export LOCAL_PATH=/home/gitrepo
-            git clone https://{{ gitops_repo_user|urlencode() }}:{{ gitops_repo_user_token|urlencode() }}@{{ gitops_repo_url }} -b {{ gitops_repo_branch }} $LOCAL_PATH
+            git clone https://{{ gitops_repo_user|urlencode() }}:${PAT}@{{ gitops_repo_url }} -b {{ gitops_repo_branch }} $LOCAL_PATH
             mkdir /home/blockchain-automation-framework/build
             touch /home/blockchain-automation-framework/build/orderer1.crt
             aws eks --region {{ region }} update-kubeconfig --name {{ cluster_name }}
