--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -6,13 +6,13 @@
     kind: Namespace
     state: absent
     wait: yes
-
+    
 - name: Generate network config file
   template:
-    src: templates/network-setup-develop.yml.j2
+    src: templates/network-setup.yml.j2
     dest: "./network-setup.yml"
     mode: 0755
-         
+
 - name: Create a k8s namespace
   community.kubernetes.k8s:
     name: openidl-baf
@@ -46,6 +46,18 @@
       data:
         ID: "{{ access_id | b64encode }}"
         KEY: "{{ access_key | b64encode }}"
+
+- name: Create secret for github token
+  community.kubernetes.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      type: Opaque
+      metadata:
+        name: openidl-github-pat
+        namespace: openidl-baf
+      data:
         PAT: "{{ gitops_repo_user_token | b64encode }}"
 
 - name: Create configmap for network configuration file
@@ -82,7 +94,7 @@
           - name: PAT
             valueFrom:
               secretKeyRef:
-                name: openidl-baf-aws
+                name: openidl-github-pat
                 key: PAT
           - name: AWS_REGION
             value: "{{ region }}"
@@ -104,8 +116,9 @@
           args: 
           - |-
             #!/bin/bash -e
+            set -x
             export LOCAL_PATH=/home/gitrepo
-            git clone https://{{ gitops_repo_user|urlencode() }}:${PAT}@{{ gitops_repo_url }} -b {{ gitops_repo_branch }} $LOCAL_PATH
+            git clone https://{{gitops_repo_user|urlencode()}}:${PAT}@{{ gitops_repo_url }} -b {{ gitops_repo_branch }} $LOCAL_PATH
             mkdir /home/blockchain-automation-framework/build
             touch /home/blockchain-automation-framework/build/orderer1.crt
             aws eks --region {{ region }} update-kubeconfig --name {{ cluster_name }}
