--- a/.github/workflows/deploy-openidl-secrets.yml
+++ b/.github/workflows/deploy-openidl-secrets.yml
@@ -67,17 +67,17 @@ jobs:
         sleep 60
         kubectl exec deploy-secrets -n openidl -- sh -c "yum install tar -y > /dev/null 2&>1"
         kubectl cp openidl-k8s/ openidl/deploy-secrets:/
-        kubectl cp openidl-test-network/vault/ openidl/deploy-secrets:/
-        kubectl exec deploy-secrets -n openidl -- sh -c "chmod +x vault/*.sh"
+        kubectl cp /vault-scripts/ openidl/deploy-secrets:/
+        kubectl exec deploy-secrets -n openidl -- sh -c "chmod +x vault-scripts/*.sh"
         kubectl exec deploy-secrets -n openidl -- sh -c \
           "mkdir openidl-k8s/charts/openidl-secrets/config-${{ github.event.inputs.env }}-${{ github.event.inputs.org_name }}"
-        kubectl exec deploy-secrets -n openidl -- sh -c "./vault/deploy-utilities.sh \
+        kubectl exec deploy-secrets -n openidl -- sh -c "./vault-scripts/deploy-utilities.sh \
           -a ${{ secrets.gitactions_user_access_key }} -s ${{ secrets.gitactions_user_secret_key }} \
           -r ${{ secrets.aws_region }} -o ${{ secrets.gitactions_eksadm_role }}"
     
     - name: Retrive secrets from vault
       run: |
-        kubectl exec deploy-secrets -n openidl -- sh -c "./vault/pull-aws-vault-config.sh \
+        kubectl exec deploy-secrets -n openidl -- sh -c "./vault-scripts/pull-aws-vault-config.sh \
           -s ${{ secrets.vault_secret_name }} -r ${{ secrets.aws_region }} -a config-${{ github.event.inputs.org_name }} \
           -c openidl-k8s/charts/openidl-secrets/config-${{ github.event.inputs.env }}-${{ github.event.inputs.org_name }}"
     
