--- a/.github/workflows/deploy-openidl-secrets.yml
+++ b/.github/workflows/deploy-openidl-secrets.yml
@@ -67,7 +67,7 @@ jobs:
         sleep 60
         kubectl exec deploy-secrets -n openidl -- sh -c "yum install tar -y > /dev/null 2&>1"
         kubectl cp openidl-k8s/ openidl/deploy-secrets:/
-        kubectl cp /vault-scripts/ openidl/deploy-secrets:/
+        kubectl cp vault-scripts/ openidl/deploy-secrets:/
         kubectl exec deploy-secrets -n openidl -- sh -c "chmod +x vault-scripts/*.sh"
         kubectl exec deploy-secrets -n openidl -- sh -c \
           "mkdir openidl-k8s/charts/openidl-secrets/config-${{ github.event.inputs.env }}-${{ github.event.inputs.org_name }}"
