--- a/awx-automation/config/anal-config-dev.yml
+++ b/awx-automation/config/anal-config-dev.yml
@@ -1,36 +1,36 @@
-ordererorg_domain: ""
-domain: ""
-internal_domain: ""
+ordererorg_domain: "aais.thetech.digital"
+domain: "analytics.thetech.digital"
+internal_domain: "analytics.internal.thetech.digital"
 node_type: "analytics"
 network:
-  org_name: ""
-  ordererorg: ""
-  ordererorg_name: ""
+  org_name: "analytics"
+  ordererorg: "false"
+  ordererorg_name: "ordererorg"
   organizations:
     - name: ""
       domain: ""
   channels:
-  - name: ""
+  - name: "defaultchannel"
     chaincode:
-      name: ""
-      repo_url: ""
-      repo_branch: ""
-      repo_path: ""
-  - name: ""
+      name: "openidl-cc-default"
+      repo_url: "github.com/rajeshsanjeevi/openidl-main.git"
+      repo_branch: "develop-jenkins"
+      repo_path: "openidl-chaincode/chaincode/openidl"
+  - name: anal-aais
     chaincode:
-      name: ""
-      repo_url: ""
-      repo_branch: ""
-      repo_path: ""
+      name: openidl-cc-aais-carriers
+      repo_url: github.com/rajeshsanjeevi/openidl-main.git
+      repo_branch: develop-jenkins
+      repo_path: openidl-chaincode/chaincode/openidl
       collectionconfig:
-        - name: ""
-          policy: ""
-  - name: ""
+        - name: "anal_aais_pdc"
+          policy: "OR('analyticsMSP.member', 'aaisMSP.member')"
+  - name: anal-carr
     chaincode:
-      name: ""
-      repo_url: ""
-      repo_branch: ""
-      repo_path: ""
+      name: openidl-cc-aais-carriers
+      repo_url: github.com/rajeshsanjeevi/openidl-main.git
+      repo_branch: develop-jenkins
+      repo_path: openidl-chaincode/chaincode/openidl
       collectionconfig:
-        - name: ""
-          policy: ""
+        - name: "anal_carr_pdc"
+          policy: "OR('analyticsMSP.member', 'carrierMSP.member')"
