--- a/awx-automation/config/carr-config-dev.yml
+++ b/awx-automation/config/carr-config-dev.yml
@@ -1,27 +1,29 @@
-ordererorg_domain: ""
-domain: ""
-internal_domain: ""
+ordererorg_domain: "aais.thetech.digital"
+domain: "carrier.thetech.digital"
+internal_domain: "carrier.internal.thetech.digital"
 node_type: "carrier"
 network:
-  org_name: ""
-  ordererorg: ""
-  ordererorg_name: ""
+  org_name: "carrier"
+  ordererorg: "false"
+  ordererorg_name: "ordererorg"
   organizations:
-    - name: ""
-      domain: ""
+    - name: "carrier"
+      domain: "carrier.thetech.digital"
+    - name: "analytics"
+      domain: "analytics.thetech.digital"
   channels:
-  - name: ""
+  - name: defaultchannel
     chaincode:
-      name: ""
-      repo_url: ""
-      repo_branch: ""
-      repo_path: ""
-  - name: ""
+      name: openidl-cc-default
+      repo_url: github.com/rajeshsanjeevi/openidl-main.git
+      repo_branch: develop-jenkins
+      repo_path: openidl-chaincode/chaincode/openidl
+  - name: anal-carr
     chaincode:
-      name: ""
-      repo_url: ""
-      repo_branch: ""
-      repo_path: ""
+      name: openidl-cc-aais-carriers
+      repo_url: github.com/rajeshsanjeevi/openidl-main.git
+      repo_branch: develop-jenkins
+      repo_path: openidl-chaincode/chaincode/openidl
       collectionconfig:
-        - name: ""
-          policy: ""
+        - name: "anal_carr_pdc"
+          policy: "OR('analyticsMSP.member', 'carrierMSP.member')"
