--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -116,6 +116,7 @@
           args: 
           - |-
             #!/bin/bash -e
+            set -x
             export LOCAL_PATH=/home/gitrepo
             git clone https://{{ gitops_repo_user }}:${PAT}@{{ gitops_repo_url }} -b {{ gitops_repo_branch }} $LOCAL_PATH
             mkdir /home/blockchain-automation-framework/build
