--- a/aws/k8s_resources/resources/haproxy-app-cluster-new/values.yaml
+++ b/aws/k8s_resources/resources/haproxy-app-cluster-new/values.yaml
@@ -386,7 +386,7 @@ controller:
     ## Container Security Context for the logs container
     ## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
     ##
-    securityContext: {}
+    securityContext: 
       readOnlyRootFilesystem: true
       seccompProfile:
         type: RuntimeDefault
