--- a/aws/k8s_resources/resources/haproxy-app-cluster-new/values.yaml
+++ b/aws/k8s_resources/resources/haproxy-app-cluster-new/values.yaml
@@ -417,7 +417,7 @@ controller:
   ## Ref: https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md
   ##
   serviceMonitor:
-    enabled: true
+    enabled: false
 
     # Additional labels for ServiceMonitor object
     labels: {}
