--- a/aws/k8s_resources/resources/haproxy-app-cluster-new/values.yaml
+++ b/aws/k8s_resources/resources/haproxy-app-cluster-new/values.yaml
@@ -1,3 +1,5 @@
+Release:
+  Namespace: haproxy
 # Enable RBAC
 rbac:
   create: true
@@ -98,7 +100,11 @@ controller:
 
   ## Annotations to be added to controller pods
   ##
-  podAnnotations: {}
+  podAnnotations:
+    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
+    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
+    service.beta.kubernetes.io/aws-load-balancer-type: nlb
+    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
 
   ## Labels to be added to the controller pods
   ##
