--- a/aws/k8s_resources/resources/haproxy-app-cluster-new/templates/rolebinding.yaml
+++ b/aws/k8s_resources/resources/haproxy-app-cluster-new/templates/rolebinding.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "haproxy-ingress.labels" . | nindent 4 }}
   name: {{ include "haproxy-ingress.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.metadata.namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -13,7 +13,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ include "haproxy-ingress.serviceAccountName" . }}
-    namespace: {{ .Release.Namespace }}
+    namespace: {{ .Values.metadata.namespace }}
   - apiGroup: rbac.authorization.k8s.io
     kind: User
     name: {{ include "haproxy-ingress.fullname" . }}
