--- a/aws/k8s_resources/resources/haproxy-app-cluster-new/templates/serviceaccount.yaml
+++ b/aws/k8s_resources/resources/haproxy-app-cluster-new/templates/serviceaccount.yaml
@@ -5,5 +5,5 @@ metadata:
   labels:
     {{- include "haproxy-ingress.labels" . | nindent 4 }}
   name: {{ include "haproxy-ingress.serviceAccountName" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.metadata.namespace }}
 {{- end }}
