--- a/aws/k8s_resources/resources/haproxy-app-cluster-new/templates/controller-deployment.yaml
+++ b/aws/k8s_resources/resources/haproxy-app-cluster-new/templates/controller-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "haproxy-ingress.labels" . | nindent 4 }}
   name: {{ include "haproxy-ingress.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.metadata.namespace }}
 spec:
 {{- if not .Values.controller.autoscaling.enabled }}
   replicas: {{ .Values.controller.replicaCount }}
