--- a/aws/k8s_resources/resources/haproxy-app-cluster-new/templates/controller-service.yaml
+++ b/aws/k8s_resources/resources/haproxy-app-cluster-new/templates/controller-service.yaml
@@ -11,7 +11,7 @@ metadata:
     {{- toYaml .Values.controller.service.labels | nindent 4 }}
 {{- end }}
   name: {{ include "haproxy-ingress.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.metadata.namespace }}
 spec:
 {{- if .Values.controller.service.clusterIP }}
   clusterIP: "{{ .Values.controller.service.clusterIP }}"
