--- a/aws/k8s_resources/resources/haproxy-app-cluster-new/templates/default-backend-service.yaml
+++ b/aws/k8s_resources/resources/haproxy-app-cluster-new/templates/default-backend-service.yaml
@@ -9,7 +9,7 @@ metadata:
   labels:
     {{- include "haproxy-ingress.defaultBackend.labels" . | nindent 4 }}
   name: {{ include "haproxy-ingress.defaultBackend.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.metadata.namespace }}
 spec:
 {{- if .Values.defaultBackend.service.clusterIP }}
   clusterIP: "{{ .Values.defaultBackend.service.clusterIP }}"
