--- a/aws/k8s_resources/resources/haproxy-app-cluster-new/templates/_podtemplate.yaml
+++ b/aws/k8s_resources/resources/haproxy-app-cluster-new/templates/_podtemplate.yaml
@@ -46,17 +46,17 @@ spec:
       image:  "{{ .Values.controller.image.repository }}:{{ .Values.controller.image.tag }}"
       imagePullPolicy: "{{ .Values.controller.image.pullPolicy }}"
       args:
-        - --configmap={{ .Release.Namespace }}/{{ include "haproxy-ingress.fullname" . }}
+        - --configmap={{ .Values.metadata.namespace }}/{{ include "haproxy-ingress.fullname" . }}
         - --ingress-class={{ .Values.controller.ingressClass }}
 {{- if .Values.controller.haproxy.enabled }}
         - --master-socket=/var/run/haproxy/master.sock
 {{- end }}
         - --sort-backends
 {{- if .Values.controller.tcp }}
-        - --tcp-services-configmap={{ .Release.Namespace }}/{{ include "haproxy-ingress.fullname" . }}-tcp
+        - --tcp-services-configmap={{ .Values.metadata.namespace }}/{{ include "haproxy-ingress.fullname" . }}-tcp
 {{- end }}
 {{- if or .Values.defaultBackend.enabled .Values.controller.defaultBackendService }}
-        - --default-backend-service={{ if .Values.defaultBackend.enabled }}{{ .Release.Namespace }}/{{ include "haproxy-ingress.defaultBackend.fullname" . }}{{ else }}{{ .Values.controller.defaultBackendService }}{{ end }}
+        - --default-backend-service={{ if .Values.defaultBackend.enabled }}{{ .Values.metadata.namespace }}/{{ include "haproxy-ingress.defaultBackend.fullname" . }}{{ else }}{{ .Values.controller.defaultBackendService }}{{ end }}
 {{- end }}
 {{- with .Values.controller.ingressClassResource.controllerClass }}
         - --controller-class={{ . }}
