--- a/awx-automation/config/carr-config-dev.yml
+++ b/awx-automation/config/carr-config-dev.yml
@@ -1,29 +1,27 @@
-ordererorg_domain: "aais.thetech.digital"
-domain: "carrier.thetech.digital"
-internal_domain: "carrier.internal.thetech.digital"
+ordererorg_domain: ""
+domain: ""
+internal_domain: ""
 node_type: "carrier"
 network:
-  org_name: "carrier"
-  ordererorg: "false"
-  ordererorg_name: "ordererorg"
+  org_name: ""
+  ordererorg: ""
+  ordererorg_name: ""
   organizations:
-    - name: "carrier"
-      domain: "carrier.thetech.digital"
-    - name: "analytics"
-      domain: "analytics.thetech.digital"
+    - name: ""
+      domain: ""
   channels:
-  - name: defaultchannel
+  - name: ""
     chaincode:
-      name: openidl-cc-default
-      repo_url: github.com/rajeshsanjeevi/openidl-main.git
-      repo_branch: develop-jenkins
-      repo_path: openidl-chaincode/chaincode/openidl
-  - name: anal-carr
+      name: ""
+      repo_url: ""
+      repo_branch: ""
+      repo_path: ""
+  - name: ""
     chaincode:
-      name: openidl-cc-aais-carriers
-      repo_url: github.com/rajeshsanjeevi/openidl-main.git
-      repo_branch: develop-jenkins
-      repo_path: openidl-chaincode/chaincode/openidl
+      name: ""
+      repo_url: ""
+      repo_branch: ""
+      repo_path: ""
       collectionconfig:
-        - name: "anal_carr_pdc"
-          policy: "OR('analyticsMSP.member', 'carrierMSP.member')"
+        - name: ""
+          policy: ""
