--- a/awx-automation/roles/baf/pre-register-users/tasks/main.yaml
+++ b/awx-automation/roles/baf/pre-register-users/tasks/main.yaml
@@ -5,6 +5,12 @@
     dest: ./pre-register-users.sh
     mode: 0755
 
+- name: Generate aws resource policy from template aws_resource_policy.json.j2
+  template:
+    src: templates/aws_resource_policy.json.j2
+    dest: ./aws_resource_policy.json
+    mode: 0755
+
 - name: Delete user script pod
   community.kubernetes.k8s:
     name: pre-register-user-script
@@ -146,6 +152,11 @@
     export AWS_PROFILE=cicd-role
     aws secretsmanager create-secret --name {{ network.org_name }}-{{ env }}-ca-app-user-token --description "Ca App User token" --secret-string {{ ca_user_token }} --region {{ aws_region }}
   when: ca_user_token_status == "null"
+
+- name: Add resource policy to the secret created {{ network.org_name }}-{{ env }}-ca-app-user-token
+  shell: |
+    export AWS_PROFILE=cicd-role
+    aws secretsmanager put-resource-policy --secret-id {{ network.org_name }}-{{ env }}-ca-app-user-token --resource-policy file://aws_resource_policy.json --block-public-policy --region {{ aws_region }}
 
 - name: Delete user script pod
   community.kubernetes.k8s:
