--- a/awx-automation/roles/mongodb/tasks/deploy.yaml
+++ b/awx-automation/roles/mongodb/tasks/deploy.yaml
@@ -1,4 +1,10 @@
 ---
+- name: Generate aws resource policy from template aws_resource_policy.json.j2
+  template:
+    src: templates/aws_resource_policy.json.j2
+    dest: ./aws_resource_policy.json
+    mode: 0755
+
 - name: Create a k8s namespace
   community.kubernetes.k8s:
     name: database
@@ -64,3 +70,12 @@
   shell: |
     export AWS_PROFILE=cicd-role; aws secretsmanager create-secret --name {{ network.org_name }}-{{ env }}-mongodb-root-token --description "Mongodb root token" --secret-string {{ mongodb_root_token }}
   no_log: True
+
+- name: Add resource policy to the secret created {{ item }}
+  shell: |
+    export AWS_PROFILE=cicd-role
+    aws secretsmanager put-resource-policy --secret-id {{ item }} --resource-policy file://aws_resource_policy.json --block-public-policy --region {{ aws_region }}
+  with_items:
+    - {{ network.org_name }}-{{ env }}-mongodb-user-token
+    - {{ network.org_name }}-{{ env }}-mongodb-root-token
+
