--- a/awx-automation/roles/vault/tasks/deploy.yaml
+++ b/awx-automation/roles/vault/tasks/deploy.yaml
@@ -5,6 +5,12 @@
     dest: "./vault-values.yaml"
     mode: 0755
 
+- name: generate aws resource policy from template aws_resource_policy.json.j2
+  template:
+    src: templates/aws_resource_policy.json.j2
+    dest: "./aws_resource_policy.j2"
+    mode: 0755
+
 - name: Create a k8s namespace
   community.kubernetes.k8s:
     name: vault
@@ -54,6 +60,11 @@
   shell: |
     export AWS_PROFILE=cicd-role
     aws secretsmanager create-secret --name {{ network.org_name }}-{{ env }}-vault-unseal-key --description "Vault unseal root token" --secret-string {{ unsealkey['content'] | b64decode | regex_findall('Initial Root Token: (.*)')|last }}
+
+- name: Add resource policy to the secret created {{ network.org_name }}-{{ env }}-vault-unseal-key
+  shell: |
+    export AWS_PROFILE=cicd-role
+    aws secretsmanager put-resource-policy --secret-id {{ network.org_name }}-{{ env }}-vault-unseal-key --resource-policy file://aws_resource_policy.json --block-public-policy --region {{ aws_region }}
 
 - name: Delete unseal keys file
   file:
@@ -210,6 +221,11 @@
     export AWS_PROFILE=cicd-role
     aws secretsmanager create-secret --name {{ network.org_name }}-{{ env }}-config-vault --description "Vault Credentials for config user" --secret-string file://creds.json
 
+- name: Add resource policy to the secret created {{ network.org_name }}-{{ env }}-config-vault
+  shell: |
+    export AWS_PROFILE=cicd-role
+    aws secretsmanager put-resource-policy --secret-id {{ network.org_name }}-{{ env }}-config-vault --resource-policy file://aws_resource_policy.json --block-public-policy --region {{ aws_region }}
+
 - name: Delete config user credentials json file
   file:
     state: absent
@@ -229,6 +245,11 @@
   shell: |
     export AWS_PROFILE=cicd-role
     aws secretsmanager create-secret --name {{ network.org_name }}-{{ env }}-kvs-vault --description "Vault Credentials for kvs user" --secret-string file://creds.json
+
+- name: Add resource policy to the secret created {{ network.org_name }}-{{ env }}-kvs-vault
+  shell: |
+    export AWS_PROFILE=cicd-role
+    aws secretsmanager put-resource-policy --secret-id {{ network.org_name }}-{{ env }}-kvs-vault --resource-policy file://aws_resource_policy.json --block-public-policy --region {{ aws_region }}
 
 - name: Delete config user credentials json file
   file:
