--- a/awx-automation/mongodb.yml
+++ b/awx-automation/mongodb.yml
@@ -38,5 +38,6 @@
         mongodb_root_token: "{{ root_token }}"
         mongodb_database: "openidl-offchain-db"
         deploy_action: "{{ deploy_action }}"
+        aws_account_number: "{{ aws_account_number }}"
 
 
