--- a/awx-automation/roles/vault/tasks/deploy.yaml
+++ b/awx-automation/roles/vault/tasks/deploy.yaml
@@ -8,7 +8,7 @@
 - name: generate aws resource policy from template aws_resource_policy.json.j2
   template:
     src: templates/aws_resource_policy.json.j2
-    dest: "./aws_resource_policy.j2"
+    dest: "./aws_resource_policy.json"
     mode: 0755
 
 - name: Create a k8s namespace
@@ -290,3 +290,8 @@
   file:
     state: absent
     path: ./vault-values.yaml
+
+- name: Delete aws resource policy file
+  file:
+    state: absent
+    path: ./aws_resources_policy.json
