--- a/aws/k8s_resources/resources/nginx-app-cluster/templates/controller-service-external.yaml
+++ b/aws/k8s_resources/resources/nginx-app-cluster/templates/controller-service-external.yaml
@@ -57,8 +57,8 @@ spec:
     {{- if and (semverCompare ">=1.20" .Capabilities.KubeVersion.Version) (.Values.controller.service.appProtocol) }}
       appProtocol: http
     {{- end }}
-    {{- if (and $setNodePorts (not (empty .Values.controller.service.nodePorts.http))) }}
-      nodePort: {{ .Values.controller.service.nodePorts.http }}
+    {{- if (and $setNodePorts (not (empty .Values.controller.service.nodePortsExternal.http))) }}
+      nodePort: {{ .Values.controller.service.nodePortsExternal.http }}
     {{- end }}
   {{- end }}
   {{- if .Values.controller.service.enableHttps }}
@@ -69,8 +69,8 @@ spec:
     {{- if and (semverCompare ">=1.20" .Capabilities.KubeVersion.Version) (.Values.controller.service.appProtocol) }}
       appProtocol: https
     {{- end }}
-    {{- if (and $setNodePorts (not (empty .Values.controller.service.nodePorts.https))) }}
-      nodePort: {{ .Values.controller.service.nodePorts.https }}
+    {{- if (and $setNodePorts (not (empty .Values.controller.service.nodePortsExternal.https))) }}
+      nodePort: {{ .Values.controller.service.nodePortsExternal.https }}
     {{- end }}
   {{- end }}
   {{- range $key, $value := .Values.tcp }}
