--- a/.github/workflows/deploy-openidl-secrets.yml
+++ b/.github/workflows/deploy-openidl-secrets.yml
@@ -37,7 +37,7 @@ defaults:
 
 jobs:
   secrets-deploy:
-    environment: ${{ github.event.inputs.env }}-${{ github.event.inputs.org_name }}
+    #environment: ${{ github.event.inputs.env }}-${{ github.event.inputs.org_name }}
     name: Deploy openIDL secrets on ${{ github.event.inputs.env }}-${{ github.event.inputs.org_name }}
     runs-on: ubuntu-latest
 
