--- a/.github/workflows/app_cluster_pipeline.yaml
+++ b/.github/workflows/app_cluster_pipeline.yaml
@@ -97,7 +97,7 @@ jobs:
         if: github.event.inputs.action == 'mongodb'
         run: |
           ansible-playbook mongodb-setup.yml -i ./inventory/ansible_provisioners \
-            -e "@./${{ github.event.inputs.org_name }}-config-${{ github.event.inputs.environment }}.yml"
+            -e "@./${{ github.event.inputs.org_name }}-config-${{ github.event.inputs.environment }}.yml" \
             -e "aws_account_number=${{ env.account }}"
   
       - name: Cleanup Mongodb cluster
