--- a/.github/workflows/blk_cluster_pipeline.yaml
+++ b/.github/workflows/blk_cluster_pipeline.yaml
@@ -119,7 +119,8 @@ jobs:
             -e "@./${{ github.event.inputs.org_name }}-config-${{ github.event.inputs.environment }}.yml" \
             -e "region=${{ env.region }}" \
             -e "registry=${{ env.registry }}"
-            -e "aws_account_number=${{ env.account }}"
+            -e "aws_account_number=${{ env.account }}" \
+            -e "env=${{ github.event.inputs.environment }}"
 
       - name: Cleanup Vault cluster
         if: github.event.inputs.action == 'vault_cleanup'
@@ -127,7 +128,8 @@ jobs:
           ansible-playbook vault-cleanup.yml -i ./inventory/ansible_provisioners \
             -e "@./${{ github.event.inputs.org_name }}-config-${{ github.event.inputs.environment }}.yml" \
             -e "region=${{ env.region }}" \
-            -e "registry=${{ env.registry }}"
+            -e "registry=${{ env.registry }}" \
+            -e "env=${{ github.event.inputs.environment }}"
             
    #   - name: Build and publish baf image
    #     if: github.event.inputs.action == 'baf_image'
