--- a/ansible-automation/roles/vault/tasks/main.yaml
+++ b/ansible-automation/roles/vault/tasks/main.yaml
@@ -34,8 +34,9 @@
     --set tlsDisable=false \
     --set server.ingress.enabled=true \
     --set server.ingress.hosts[0].host=vault.{{ env }}.{{ internal_domain }} \
-    --set server.ingress.annotations."kubernetes\.io/ingress\.class"=haproxy \
+    --set server.ingress.annotations."kubernetes\.io/ingress\.class"=nginx \
     --set server.dataStorage.storageClass=openidl-sc \
+    --set server.ingress.annotations."nginx\.ingress\.kubernetes\.io/rewrite-target"=/ \
     --version="0.16.1"
   tags:
     - hashicorp-vault
@@ -47,10 +48,12 @@
     sleep 60
 
 - name: Initialize and unseal the vault
+  no_log: true
   shell: |
     kubectl -n vault exec vault-0 -- vault operator init > ./vault-unseal-keys.txt
 
 - name: Get the vault-unseal-key from the server
+  no_log: true
   slurp:
     src: "./vault-unseal-keys.txt"
   register: unsealkey
@@ -61,6 +64,7 @@
 #   ignore_errors: yes
 
 - name: upload Vault unseal keys to aws secrets manager
+  no_log: true
   shell: |
     aws secretsmanager create-secret --name {{ network.org_name }}-{{ env }}-vault-unseal-key --description "Vault unseal root token" --secret-string {{ unsealkey['content'] | b64decode | regex_findall('Initial Root Token: (.*)')|last }}
 
@@ -77,11 +81,13 @@
   shell: sleep 120
 
 - name: Create secret path for org
+  no_log: true
   shell: |
     kubectl -n vault exec vault-0 -- vault login {{ unsealkey['content'] | b64decode | regex_findall('Initial Root Token: (.*)')|last }}
     kubectl -n vault exec vault-0 -- vault secrets enable -version=1 -path={{ network.org_name }} kv
 
 - name: Create secret path for orderer org
+  no_log: true
   shell: |
     kubectl -n vault exec vault-0 -- vault secrets enable -version=1 -path={{ network.ordererorg_name }} kv
   when: network.ordererorg == "true"
@@ -105,6 +111,7 @@
     kubectl -n vault create configmap add-vault-user-script --from-file=add-vault-user.sh=./add-vault-user.sh
 
 - name: Create secret for credentials
+  no_log: true
   community.kubernetes.k8s:
     state: present
     definition: 
@@ -122,6 +129,7 @@
         VAULT_KVS_USER_TOKEN: "{{ vault_kvs_user_token | b64encode }}"
 
 - name: Launch Pod for vault user
+  no_log: true
   community.kubernetes.k8s:
     state: present
     definition:
@@ -209,6 +217,7 @@
     msg: '{{ baf_logs.stdout_lines }}'
 
 - name: Generate user credentials json
+  no_log: true
   template:
     src: templates/creds.json.j2
     dest: ./creds.json
@@ -224,6 +233,7 @@
 #   ignore_errors: yes
 
 - name: Upload config user credentials to secrets manager
+  no_log: true
   shell: |
     aws secretsmanager create-secret --name {{ network.org_name }}-{{ env }}-config-vault --description "Vault Credentials for config user" --secret-string file://creds.json
 
@@ -237,6 +247,7 @@
     path: ./creds.json
 
 - name: Generate user credentials json
+  no_log: true
   template:
     src: templates/creds.json.j2
     dest: ./creds.json
@@ -252,6 +263,7 @@
 #   ignore_errors: yes
 
 - name: Upload kvs user credentials to secrets manager
+  no_log: true
   shell: |
     aws secretsmanager create-secret --name {{ network.org_name }}-{{ env }}-kvs-vault --description "Vault Credentials for kvs user" --secret-string file://creds.json
 
